--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^3.0.1
   responsive_sizer: ^3.1.1
   flutter_svg:
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
