--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   responsive_sizer: ^3.1.1
   flutter_svg:
   http: ^0.13.5
+  syncfusion_flutter_pdfviewer: ^20.4.43
 
 dev_dependencies:
   flutter_test:
