--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.vbt_sun_app_project">
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission
+    android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+     />
    <application
         android:label="vbt_sun_app_project"
         android:name="${applicationName}"
